# greek_nt

./: .env.example  CLAUDE.md  Dockerfile  README.md  deploy.sh  fly.toml  manage.py  pyproject.toml  reset_schema.py  set_fly_secrets.sh  use_sqlite.sh  use_supabase_local.sh
data/: sdbg_cleaner.py
greek_nt/: admin.py  app_urls.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
greek_nt/management/commands/: README.md  deploy_db.py  load_token_data.py
greek_nt/migrations/: 0001_initial.py  0002_alter_token_role_token_token_text_be6a67_idx_and_more.py  0002_load_sblgnt_token_data.py  0002_searchevent.py  0003_alter_token_role.py  0003_load_sblgnt_token_data.py  0003_token_token_text_be6a67_idx.py  0004_alter_token_contextual_glosses_alter_token_frame_and_more.py  0004_token_idx.py  0005_alter_token_case_alter_token_class_field_and_more.py  0006_alter_token_after.py  0007_alter_token_after_alter_token_case_and_more.py  0008_rename_token_text_be6a67_idx_token_text_idx_and_more.py
greek_nt/templates/greek_nt/: about.html  base.html  home.html  popular_searches.html  search_results.html
greek_nt/templatetags/: greek_nt_extras.py
theme/templates/: base.html
